fixed text wrapping around a picture on the page Sharing results

--- a/src/app/components/results/_results-media.scss
+++ b/src/app/components/results/_results-media.scss
@@ -1,3 +1,6 @@
 @media (max-width: $breakpoint) {
-
+  .img__wrap--float-right {
+    width: calc(16% + 502px);
+    margin: 55px -344px 16px 13px;
+  }
 }
