--- a/src/app/components/results/results.scss
+++ b/src/app/components/results/results.scss
@@ -100,3 +100,11 @@
 .title-wrap__pre-results--left-space {
   padding-left: 62px;
 }
+
+
+.img__wrap--float-right {
+  width: 730px;
+  height: auto;
+  float: right;
+  margin: 55px -463px 16px 13px;
+}
