--- a/src/sass/partials/_common-styling.scss
+++ b/src/sass/partials/_common-styling.scss
@@ -362,15 +362,6 @@ h6 {
   }
 }
 
-.img__wrap--absolute {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: calc(149% + 303px);
-  height: auto;
-}
-
-
 
 //end common stylin for images
 
