--- a/src/sass/responsive/_common-styling-media.scss
+++ b/src/sass/responsive/_common-styling-media.scss
@@ -34,9 +34,6 @@
     padding-left: 25px;
   }
 
-  .img__wrap--absolute {
-    width: calc(149% + 129px);
-  }
 }
 
 @media (max-width: $breakpoint-lg) {
